Updated package.json to Version 1.0 as all planned for features are MVP working at this point! Updated Log and Todo pages to filter and display correctly depending on which vehicles are selected. Updated VehiclesSettings component and css style to look nicer on smaller screens.

--- a/src/styles/vehicle.css
+++ b/src/styles/vehicle.css
@@ -15,6 +15,10 @@ h4.vehicles__selector__header > span {
   color: inherit;
 }
 
+div.vehicle__editor {
+  margin: 0;
+}
+
 .vehicle__details__update {
   margin: 1px;
   padding: 4px;
@@ -24,9 +28,6 @@ h4.vehicles__selector__header > span {
 }
 
 .vehicle__container {
-  display: grid;
-  /* 190px for the year+make+model, rest for the Edit button (and when actively editing, the Edit Vehicle card) */
-  grid-template-columns: 190px auto;
   align-items: center;
   margin: 0.5rem;
   background: var(--backgroundLayerTwo);
